# Deleeuw-AI-x-Bio-hackathon

./: .env.example  .gitignore  AIxBio_Strategic_Intelligence.md  BioRefusalAudit_PRD_v2.md  CLAUDE.md  LICENSE  LICENSE_HL3_DATASET.md  README.md  REVIEWER_QUICKSTART.md  SAFETY.md  STATUS.md  SUBMISSION_CHECKLIST.md  TROUBLESHOOTING.md  pyproject.toml
app/: dashboard.py
biorefusalaudit/: __init__.py  cli.py
configs/: calibration_gemma2_2b.yaml  calibration_gemma2_2b_biosae_v1.yaml  calibration_gemma2_2b_custom.yaml  calibration_gemma4_e2b.yaml  calibration_gemma4_e2b_biosae_v1.yaml  calibration_gemma4_oursae_v1.yaml  features_of_interest.yaml  models.yaml  projection_adapter_gemma2_2b.yaml
demo/: README.md  data_for_viz.json  interactive_explorer.html  scaling_plot.md  scaling_plot_real.md  smoke_activations_sample.json  smoke_report_sample.md
docs/: COMPUTE.md  HL3_RATIONALE.md  METHOD.md
notebooks/: README.md  colab_biorefusalaudit.ipynb  colab_gemma4_sae_training.ipynb  colab_gemma4_sae_training_v1.ipynb
notes/: GENERATION_METHODOLOGY.md  GPU_SESSION_2026-04-25.md  SESSION_PLAN_2026-04-24_overnight.md  SESSION_SUMMARY_2026-04-25.md  SPECIALIST_REVIEW_2026_04_23.md
paper/: CUTS_LOG.md  blog_post.md  policy_brief.md  submission.md  submission.tex  submission_final.md  submission_final.tex  submission_print.html  video_script.md  writeup.md
scripts/: _check_tex.py  _fix_sae_notebook.py  _repair_sae_notebook.py  analyze_format_ablation.py  analyze_legality_confound.py  analyze_sae_confound.py  analyze_sae_training.py  audit_eval_set.py  auto_tune_catalog.py  batch_publish_loop.sh  build_arxiv.py  build_cover.py  build_pdf.py  build_scaling_plot.py  chain_next_eval.sh  (+47 more)
(+226 files in other folders)
